Fix for bug 308706 (1.5 Beta crashes Immediately upon double-clicking on the Icon. [@ nsContentUtils::SplitExpatName]). r/sr=jst.